[feature/projectsetup] refactoring
Signed-off-by: huluvu424242 <huluvu424242@gmail.com>