@@ -255,6 +255,193 @@
         </plugins>
     </build>
 
+    <profiles>
+
+        <profile>
+            <id>jdk-8</id>
+            <activation>
+                <jdk>[1.8,1.10)</jdk>
+            </activation>
+            <properties>
+                <jvm.arg.addOpens/>
+                <maven.compiler.source>${java.vm.specification.version}</maven.compiler.source>
+                <maven.compiler.target>${java.vm.specification.version}</maven.compiler.target>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk-11-to-xx</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <properties>
+                <!-- Legacy 'jmdesprez' plugin used in compatibility test needs access to internal JDK API -->
+                <jvm.arg.addOpens>
+                    --add-opens java.desktop/com.sun.imageio.plugins.png=ALL-UNNAMED
+                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.net=ALL-UNNAMED
+                </jvm.arg.addOpens>
+                <maven.compiler.release>${java.vm.specification.version}</maven.compiler.release>
+            </properties>
+        </profile>
+
+
+        <profile>
+            <id>show-properties</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <echoproperties/>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>addStandardArtifacts</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- NOTE: We don't need a groupId specification because the group is
+                            org.apache.maven.plugins ...which is assumed by default. -->
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>package-assemblies</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <archive>
+                                        <manifest>
+                                            <mainClass>com.github.huluvu424242.sql.ddl.SqlDDL2PlantumlCompiler
+                                            </mainClass>
+                                        </manifest>
+                                    </archive>
+                                    <tarLongFileMode>posix</tarLongFileMode>
+                                    <descriptorRefs>
+                                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                                    </descriptorRefs>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <attach>true</attach>
+                            <failOnError>false</failOnError>
+                            <debug>false</debug>
+                            <verbose>false</verbose>
+                            <encoding>UTF-8</encoding>
+                            <charset>UTF-8</charset>
+                            <docencoding>UTF-8</docencoding>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>headless</id>
+            <properties>
+                <junit-excluded-groups>headfull</junit-excluded-groups>
+            </properties>
+        </profile>
+        <profile>
+            <id>sonarqube</id>
+            <properties>
+                <junit-excluded-groups>headfull</junit-excluded-groups>
+                <maven.clover.skip>true</maven.clover.skip>
+            </properties>
+        </profile>
+        <profile>
+            <id>pruefeVersionen</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>versions-maven-plugin</artifactId>
+                        <configuration>
+                            <generateBackupPoms>false</generateBackupPoms>
+                            <rulesUri>file:///${project.basedir}/etc/version-rules.xml</rulesUri>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>show-dep-updates</id>
+                                <phase>
+                                    validate
+                                </phase>
+                                <goals>
+                                    <goal>display-dependency-updates</goal>
+                                    <goal>display-plugin-updates</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+
+        </profile>
+        <profile>
+            <id>publish-github</id>
+            <distributionManagement>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub Huluvu424242 Apache Maven Packages</name>
+                    <url>https://maven.pkg.github.com/Huluvu424242/${project.artifactId}</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+        <profile>
+            <id>publish-central</id>
+            <distributionManagement>
+                <repository>
+                    <id>ossrh</id>
+                    <name>Central Repository OSSRH</name>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+
+    </profiles>
+
+
     <organization>
         <name>Huluvu424242</name>
         <url>https://github.com/huluvu424242</url>
